--- a/marketing-page/assets/sass/components/_features.scss
+++ b/marketing-page/assets/sass/components/_features.scss
@@ -2,11 +2,11 @@
   background-color: $neutral-2;
   &__title {
     color: $background-color-yellow-3;
-    padding: 5%;
   }
+  
   &__item {
-    background-color: $background-color-yellow-3;
     border-radius: 30px;
+    color: $background-color-yellow-3;
   }
 
   &__img-container {
