--- a/marketing-page/assets/sass/components/_footer.scss
+++ b/marketing-page/assets/sass/components/_footer.scss
@@ -1,5 +1,5 @@
 .footer__container {
-  background-color: $background-color-yellow-1;
+  background-color: $neutral-3;
 
   .footer__navlink {
     color: $neutral-1;
