--- a/marketing-page/assets/sass/layout/_layout.scss
+++ b/marketing-page/assets/sass/layout/_layout.scss
@@ -107,7 +107,7 @@
   .main-nav-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
 
     &__imgcontainer {
@@ -178,16 +178,13 @@
   .features-section {
     display: flex;
     flex-direction: column;
+    align-items: center;
     max-width: 100%;
-    margin: auto;
+    justify-content: space-around;
 
     &__item {
       display: flex;
       align-items: center;
-      justify-content: center;
-      align-content: center;
-      padding: 0;
-      margin-top: 1.5rem;
 
       &:nth-child(3) {
         flex-direction: row-reverse;
