--- a/marketing-page/assets/css/main.css
+++ b/marketing-page/assets/css/main.css
@@ -404,18 +404,28 @@ em, label, input, b, span {
 .modal-beta__form {
   border-radius: 15px;
 }
+.modal-beta__form .form-group {
+  padding: 0;
+  margin: 0.75rem;
+}
 .modal-beta__form label {
   margin: 0;
   padding: 0;
+  font-weight: 600;
 }
 .modal-beta__form input {
   padding: 0.75rem;
+  border-radius: 15px;
+  border: none;
 }
 .modal-beta__form input[type=submit] {
-  padding: 0.75rem;
+  padding: 1.25rem;
   display: block;
-  margin: auto;
+  margin: 1.5rem auto;
   cursor: pointer;
+  border-radius: 15px;
+  outline: none;
+  border: none;
 }
 
 .overlay {
