--- a/marketing-page/assets/sass/components/_modalbeta.scss
+++ b/marketing-page/assets/sass/components/_modalbeta.scss
@@ -20,22 +20,31 @@
 
   &__form {
     border-radius: 15px;
-
+    
+    .form-group {
+      padding: 0;
+      margin: 0.75rem;
+    }
     label {
       margin: 0;
       padding: 0;
+      font-weight: 600;
     }
 
     input {
       padding: 0.75rem;
+      border-radius: 15px;
+      border: none;
     }
 
     input[type=submit] {
-      padding: 0.75rem;
+      padding: 1.25rem;
       display: block;
-      margin: auto;
+      margin: 1.5rem auto;
       cursor: pointer;
-
+      border-radius: 15px;
+      outline: none;
+      border: none;
     }
   }
 }
