--- a/marketing-page/assets/sass/components/_navbar.scss
+++ b/marketing-page/assets/sass/components/_navbar.scss
@@ -9,6 +9,14 @@
       .main-nav__navlink {
         color: $neutral-1;
         margin: 0;
+        padding: 1.25rem;
+
+        &:hover, &:visited {
+          color: $neutral-2;
+          border: 1px solid $neutral-2;
+          border-radius: 15px;
+          transition: border 0.5s ease;
+        }
       }
     }
   }
